--- a/resources/html/videoViewer.html
+++ b/resources/html/videoViewer.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta content='IE=Edge' http-equiv='X-UA-Compatible' />
@@ -15,18 +16,20 @@
 
         socket.onmessage = function (event) {
             if (player == null) {
-                sendState("state", YT.PlayerState.UNSTARTED);
+                sendState("state", -1);
                 return;
             }
             const message = event.data;
             if (message == "Play") {
                 player.playVideo();
             } else if (message == "Stop") {
-                
+                player.stopVideo();
             } else if (message == "Mute") {
-
+                player.mute();
+            } else if (message == "Unmute") {
+                player.unMute();
             } else if (message.startsWith("GoTo_")) {
-
+                player.seekTo(message.substring(message.indexOf("_") + 1), true);
             }
         }
 
